static/css/style.css
/* Navbar spacing */
body {
	padding-top: 64px;
}

/* Navbar styling */
.navbar-primary {
}

.navbar-secondary {
	top: 50px;
	background-color: #444;
	border-color: #282828;
}

.navbar-secondary + .container {
	margin-top: 50px;
}

/* Page title */
.page-header {
	margin-top: -6px;
	padding-bottom: 0;
	border-bottom: 1px solid #BBB;
}

/* Active table rows */
tr.active, td.active, tr.active td {
	background-color: #f2dede !important;
}

/* Footer positioning */
html, body {
	height: 100%;
}
body > .container { 
	min-height: 100%;
	padding-bottom: 76px;
	position: relative;
}
#footer {
	height: 60px;
	padding-top: 10px;
	margin-top: -60px;
	clear: both;

	background-color: #F5F5F5;
}

/* Table of contents */
#toc {
	position: absolute;
	top: 20px;
	right: -100px;
}
#toc > ul {
	position: fixed;
}

